@@ -1,4 +1,5 @@
 HEAD
+	+ Added compMessage field to EBox::Event
 	+ Bugfix: actionCell parameters are now passed correctly
 2.0.6
 	+ Added link to download software.log in unexpected error page
